tests/baselines/reference/parserObjectType5.errors.txt
tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType5.ts(2,7): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType5.ts(3,7): error TS1005: '(' expected.


==== tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType5.ts (2 errors) ====
    var v: {
       A: B
          ~
!!! error TS2304: Cannot find name 'B'.
       <T>;
          ~
!!! error TS1005: '(' expected.
    };